GarantiVpos provider added

--- a/MultiPosTR/VPosTR.Api/VPosTR.Api.csproj
+++ b/MultiPosTR/VPosTR.Api/VPosTR.Api.csproj
@@ -43,6 +43,7 @@
     <Compile Include="PosRequest.cs" />
     <Compile Include="PosResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VirtualPos\EstVPos.cs" />
     <Compile Include="VirtualPos\GarantiVPos.cs" />
     <Compile Include="VPos.cs" />
     <Compile Include="VPosContext.cs" />
